---
config:
  class:
    hideEmptyMembersBox: true
---
classDiagram
    class JobApplication {
        +string id
        +string company
        +string positionTitle
        +string applicationDate
        +string createdAt
        +string updatedAt
        +1|2|3 interestRating?
        +string nextEventDate?
        +string jobPostingUrl?
        +string jobDescription?
        +Record~string,ApplicationStatus~ statusLog
        +NotesCollection notes
        +update(newVals)
        +newStatus(status)
    }

    class ApplicationStatus {
        +StatusCategory category
        +string current
        +string note?
    }

    class Note {
        +string id
        +string content
        +string createdAt
        +string updatedAt
    }

    class NotesCollection {
        +Record~string,NoteProps~ notes
        +NoteCollectionOperations operations
    }

    class NoteCollectionOperations {
        +get(id): Result~Note,Error~
        +getAll(): Result~Note[],Error~
        +add(data): Result~Note,Error~
        +update(id, data): Result~Note,Error~
        +remove(id): Result~void,Error~
    }

    class PipelineConfig {
        +string[] active
        +string[] inactive
        +addActiveStatus(status: string)
        +addInactiveStatus(status: string)
        +removeStatus(status: string)
        +toJSON()
    }

JobApplication *-- NotesCollection : contains
JobApplication *-- ApplicationStatus : has many in statusLog
NotesCollection *-- NoteCollectionOperations : has
NotesCollection o-- Note : manages
JobApplication --> PipelineConfig : uses
